# Optimization-alloy-design

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/extracted/: README.md  paper1_search_space_bounds.csv  paper1_selected_alloys_table4_composition_properties.csv  paper1_table5_equilibrium_constitution_750C.csv  paper1_table6_predicted_properties_750C.csv  paper2_screening_summary.csv  paper2_table1_creep_database_variable_ranges.csv  paper2_table2_lattice_misfit_coefficients.csv  paper2_table3_density_model_coefficients.csv  paper2_table4_search_space_bounds.csv
notebooks/: alloy_pareto_demo.ipynb
results/: notebook_ga_front.csv  pareto_bruteforce.csv  pareto_ga.csv  restart_smoke.csv
src/alloy_pareto/: __init__.py  __main__.py  bruteforce.py  cli.py  evaluation.py  io.py  models.py  nsga2.py  pareto.py
tests/: test_bruteforce.py  test_data_source.py  test_pareto.py
