[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alloy-pareto"
version = "0.1.0"
description = "Prototype multi-criteria alloy optimization with NSGA-II and brute-force Pareto search"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
alloy-pareto = "alloy_pareto.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
